# SKSE-Plugin-Template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/Scripts/: CMake-Copy-Artifacts.cmake  CMake-Copy-Scripts.cmake
include/: PCH.h
src/: main.cpp
src/Data/: ModObjectManager.h
src/Papyrus/: papyrus.cpp  papyrus.h
src/Settings/: INISettings.h
src/Settings/INI/: INISettings.cpp  INISettings.h
src/common/: PCH.h
src/export/: SKSEPlugin.cpp
src/hooks/: hooks.cpp
